--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -19,8 +19,8 @@
     "!apt install -y ffmpeg\n",
     "\n",
     "# Clone repository\n",
-    "!git clone https://github.com/hacksider/Deep-Live-Cam.git\n",
-    "%cd Deep-Live-Cam"
+    "!git clone https://github.com/Mayank-kanojiya/liveswap.git\n",
+    "%cd liveswap"
    ]
   },
   {
