--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -31,6 +31,7 @@
    "source": [
     "# Install Python dependencies\n",
     "!pip install -q gradio opencv-python insightface onnxruntime-gpu torch torchvision\n",
+    "!pip install -q customtkinter pillow psutil opennsfw2 protobuf\n",
     "!pip install -q git+https://github.com/xinntao/BasicSR.git@master\n",
     "!pip install -q git+https://github.com/TencentARC/GFPGAN.git@master"
    ]
