--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -61,11 +61,17 @@
     "import cv2\n",
     "import tempfile\n",
     "import sys\n",
+    "import os\n",
+    "os.environ['DISPLAY'] = ':0'\n",
     "sys.path.append('.')\n",
+    "\n",
+    "# Initialize modules globals first\n",
+    "import modules.globals\n",
+    "modules.globals.headless = True\n",
+    "modules.globals.execution_providers = ['CPUExecutionProvider']\n",
     "\n",
     "from modules.processors.frame.face_swapper import process_frame\n",
     "from modules.face_analyser import get_one_face\n",
-    "import modules.globals\n",
     "\n",
     "def swap_face(source_image, target_file):\n",
     "    if source_image is None or target_file is None:\n",
