--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -137,7 +137,7 @@
     "        outputs=[result_media, status_text]\n",
     "    )\n",
     "\n",
-    "demo.launch(share=True, debug=True)"
+    "demo.launch(share=True, debug=False, server_name='0.0.0.0', server_port=7860)"
    ]
   }
  ],
