--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -73,47 +73,36 @@
     "from modules.processors.frame.face_swapper import process_frame\n",
     "from modules.face_analyser import get_one_face\n",
     "\n",
-    "def swap_face(source_image, target_file):\n",
-    "    if source_image is None or target_file is None:\n",
-    "        return None, \"Please provide both source image and target media\"\n",
+    "def swap_face(source_image, target_image):\n",
+    "    if source_image is None or target_image is None:\n",
+    "        return None, \"Please upload both source and target images\"\n",
     "    \n",
     "    try:\n",
-    "        modules.globals.source_path = source_image\n",
+    "        # Read images\n",
+    "        source_img = cv2.imread(source_image)\n",
+    "        target_img = cv2.imread(target_image)\n",
     "        \n",
-    "        # Check if target is image or video\n",
-    "        if target_file.name.lower().endswith(('.jpg', '.jpeg', '.png', '.bmp')):\n",
-    "            # Image processing\n",
-    "            result_path = tempfile.mktemp(suffix='.jpg')\n",
-    "            frame = cv2.imread(target_file.name)\n",
-    "            source_face = get_one_face(cv2.imread(source_image))\n",
-    "            result_frame = process_frame(source_face, frame)\n",
-    "            cv2.imwrite(result_path, result_frame)\n",
-    "            return result_path, \"Face swap completed!\"\n",
-    "            \n",
-    "        else:\n",
-    "            # Video processing\n",
-    "            result_path = tempfile.mktemp(suffix='.mp4')\n",
-    "            cap = cv2.VideoCapture(target_file.name)\n",
-    "            fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
-    "            width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "            height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "            \n",
-    "            fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "            out = cv2.VideoWriter(result_path, fourcc, fps, (width, height))\n",
-    "            \n",
-    "            source_face = get_one_face(cv2.imread(source_image))\n",
-    "            \n",
-    "            while True:\n",
-    "                ret, frame = cap.read()\n",
-    "                if not ret:\n",
-    "                    break\n",
-    "                result_frame = process_frame(source_face, frame)\n",
-    "                out.write(result_frame)\n",
-    "            \n",
-    "            cap.release()\n",
-    "            out.release()\n",
-    "            return result_path, \"Video face swap completed!\"\n",
-    "            \n",
+    "        if source_img is None:\n",
+    "            return None, \"Could not read source image\"\n",
+    "        if target_img is None:\n",
+    "            return None, \"Could not read target image\"\n",
+    "        \n",
+    "        # Get source face\n",
+    "        source_face = get_one_face(source_img)\n",
+    "        if source_face is None:\n",
+    "            return None, \"No face detected in source image\"\n",
+    "        \n",
+    "        # Process frame\n",
+    "        result_frame = process_frame(source_face, target_img)\n",
+    "        if result_frame is None:\n",
+    "            return None, \"Face swap failed - no face detected in target image\"\n",
+    "        \n",
+    "        # Save result\n",
+    "        result_path = tempfile.mktemp(suffix='.jpg')\n",
+    "        cv2.imwrite(result_path, result_frame)\n",
+    "        \n",
+    "        return result_path, \"Face swap completed successfully!\"\n",
+    "        \n",
     "    except Exception as e:\n",
     "        return None, f\"Error: {str(e)}\"\n",
     "\n",
@@ -124,7 +113,7 @@
     "    with gr.Row():\n",
     "        with gr.Column():\n",
     "            source_image = gr.Image(label=\"Source Face Image\", type=\"filepath\")\n",
-    "            target_media = gr.File(label=\"Target Image/Video\")\n",
+    "            target_image = gr.Image(label=\"Target Image\", type=\"filepath\")\n",
     "            swap_btn = gr.Button(\"Swap Face\", variant=\"primary\")\n",
     "            \n",
     "        with gr.Column():\n",
@@ -133,7 +122,7 @@
     "    \n",
     "    swap_btn.click(\n",
     "        fn=swap_face,\n",
-    "        inputs=[source_image, target_media],\n",
+    "        inputs=[source_image, target_image],\n",
     "        outputs=[result_media, status_text]\n",
     "    )\n",
     "\n",
