--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -69,9 +69,14 @@
     "import modules.globals\n",
     "modules.globals.headless = True\n",
     "modules.globals.execution_providers = ['CPUExecutionProvider']\n",
+    "modules.globals.frame_processors = ['face_swapper']\n",
     "\n",
-    "from modules.processors.frame.face_swapper import process_frame\n",
+    "# Import face swap modules\n",
+    "from modules.processors.frame.face_swapper import get_face_swapper, process_frame\n",
     "from modules.face_analyser import get_one_face\n",
+    "\n",
+    "# Initialize face swapper\n",
+    "face_swapper = get_face_swapper()\n",
     "\n",
     "def swap_face(source_image, target_image):\n",
     "    if source_image is None or target_image is None:\n",
@@ -92,9 +97,9 @@
     "        if source_face is None:\n",
     "            return None, \"No face detected in source image\"\n",
     "        \n",
-    "        # Process frame\n",
-    "        result_frame = process_frame(source_face, target_img)\n",
-    "        if result_frame is None:\n",
+    "        # Process frame with face swapper\n",
+    "        result_frame = process_frame(source_face, target_img, face_swapper)\n",
+    "        if result_frame is None or (result_frame == target_img).all():\n",
     "            return None, \"Face swap failed - no face detected in target image\"\n",
     "        \n",
     "        # Save result\n",
@@ -126,7 +131,7 @@
     "        outputs=[result_media, status_text]\n",
     "    )\n",
     "\n",
-    "demo.launch(share=True, debug=False)"
+    "demo.launch(share=True, debug=True)"
    ]
   }
  ],
