--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -131,7 +131,7 @@
     "        outputs=[result_media, status_text]\n",
     "    )\n",
     "\n",
-    "demo.launch(share=True, debug=True)"
+    "demo.launch(share=True, debug=False)"
    ]
   }
  ],
