--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -98,7 +98,7 @@
     "            return None, \"No face detected in source image\"\n",
     "        \n",
     "        # Process frame with face swapper\n",
-    "        result_frame = process_frame(source_face, target_img, face_swapper)\n",
+    "        result_frame = process_frame(source_face, target_img)\n",
     "        if result_frame is None or (result_frame == target_img).all():\n",
     "            return None, \"Face swap failed - no face detected in target image\"\n",
     "        \n",
