--- a/gpu_colab.ipynb
+++ b/gpu_colab.ipynb
@@ -43,8 +43,9 @@
    "outputs": [],
    "source": [
     "# Install GPU-optimized dependencies\n",
-    "!pip install -q opencv-python insightface onnxruntime-gpu torch torchvision\n",
+    "!pip install -q opencv-python onnxruntime-gpu torch torchvision\n",
     "!pip install -q customtkinter pillow psutil opennsfw2 protobuf cv2-enumerate-cameras\n",
+    "!pip install -q insightface\n",
     "!pip install -q git+https://github.com/xinntao/BasicSR.git@master\n",
     "!pip install -q git+https://github.com/TencentARC/GFPGAN.git@master"
    ]
