--- a/gpu_colab.ipynb
+++ b/gpu_colab.ipynb
@@ -61,7 +61,7 @@
     "os.makedirs('models', exist_ok=True)\n",
     "\n",
     "!wget -q -O models/GFPGANv1.4.pth https://huggingface.co/hacksider/deep-live-cam/resolve/main/GFPGANv1.4.pth\n",
-    "!wget -q -O models/inswapper_128.onnx https://huggingface.co/hacksider/deep-live-cam/resolve/main/inswapper_128_fp16.onnx"
+    "!wget -q -O models/inswapper_128_fp16.onnx https://huggingface.co/hacksider/deep-live-cam/resolve/main/inswapper_128_fp16.onnx"
    ]
   },
   {
