--- a/eating_mouth_mask.ipynb
+++ b/eating_mouth_mask.ipynb
@@ -163,9 +163,25 @@
     "# Face swap while preserving eating actions\n",
     "face_swap_preserve_eating(source_image, target_media, output_file, preserve_mouth=True)\n",
     "\n",
-    "# Download result\n",
+    "# Check for output files\n",
+    "import os\n",
+    "print(\"Files in /content:\")\n",
+    "for f in os.listdir('/content'):\n",
+    "    if f.endswith('.mp4'):\n",
+    "        print(f\"Found: {f}\")\n",
+    "\n",
+    "# Find and download result\n",
     "from google.colab import files\n",
-    "files.download(output_file)"
+    "if os.path.exists(output_file):\n",
+    "    files.download(output_file)\n",
+    "else:\n",
+    "    # Check liveswap directory\n",
+    "    for f in os.listdir('/content/liveswap'):\n",
+    "        if f.endswith('.mp4'):\n",
+    "            full_path = f'/content/liveswap/{f}'\n",
+    "            print(f\"Downloading: {full_path}\")\n",
+    "            files.download(full_path)\n",
+    "            break"
    ]
   }
  ],
